Fix the list alignment

--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,12 @@ img {
   border: 2px green dashed;
   padding: 5px 10px 5px 10px;
 }
+ul {
+ list-style-type: inside; 
+}
+ol {
+  list-style-type: inside;
+}
 
 #first-ingredient {
  color: blue; 
